err/prpp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prpp'...
Listing './lib/python3.5/site-packages/prpp/entities'...
Compiling './lib/python3.5/site-packages/prpp/entities/devices.py'...
***   File "./lib/python3.5/site-packages/prpp/entities/devices.py", line 39
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/prpp/entities/reservations.py'...
***   File "./lib/python3.5/site-packages/prpp/entities/reservations.py", line 56
    except Exception,ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/prpp/entities/rooms.py'...
***   File "./lib/python3.5/site-packages/prpp/entities/rooms.py", line 35
    except Exception,ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/prpp/entities/users.py'...
***   File "./lib/python3.5/site-packages/prpp/entities/users.py", line 21
    except Exception,ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/prpp/entities/utils.py'...
***   File "./lib/python3.5/site-packages/prpp/entities/utils.py", line 27
    print "[prpp] datetime_to_isoformat %s" % date_string
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/prpp/stubs'...
Compiling './lib/python3.5/site-packages/prpp/stubs/plcm.py'...
***   File "./lib/python3.5/site-packages/prpp/stubs/plcm.py", line 96
    print "[prpp][err]invalid enum value ", self.__dict__[property_name]
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/prpp/stubs/plcmreservation.py'...
***   File "./lib/python3.5/site-packages/prpp/stubs/plcmreservation.py", line 325
    print "[prpp] occurence duration : %s" % self.sched_recurrence.duration
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/prpp/stubs/plcmreservedparticipantlist.py'...
***   File "./lib/python3.5/site-packages/prpp/stubs/plcmreservedparticipantlist.py", line 50
    print "[prpp]%s" % plcm_participant
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/prpp/wrapper'...
Compiling './lib/python3.5/site-packages/prpp/wrapper/request.py'...
***   File "./lib/python3.5/site-packages/prpp/wrapper/request.py", line 69
    except Exception,ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/prpp/wrapper/server.py'...
***   File "./lib/python3.5/site-packages/prpp/wrapper/server.py", line 42
    print PRPPRequest(self, "users").api_get()
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/prpp-1.8.3.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
